feat: implement sections management for teachers with UI enhancements and custom scrollbar styles

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -36,3 +36,41 @@
 @import '../../vendor/filament/widgets/resources/css/index.css';
 
 @variant dark (&:where(.dark, .dark *));
+
+
+/* Custom scrollbar */
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(209 213 219);
+    border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(156 163 175);
+}
+
+.dark ::-webkit-scrollbar-thumb {
+    background: rgb(55 65 81);
+}
+
+.dark ::-webkit-scrollbar-thumb:hover {
+    background: rgb(75 85 99);
+}
+
+/* Hide scrollbar for mobile tabs */
+.hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
